# Buck_Boost

./: .gitignore  readme.md
Hardware/: BOM_Board1_PCB1_2026-03-07.xlsx  Buck-Boost Power Supply V0.9.eprj_backup  mos选型.xlsx  新建 Text Document.txt
Software/: .clangd  .cursorrules  .mxproject  Buck_Boost_Power_SupplyVer1.1.ioc  CMakeLists.txt  PIN_CONECTION.md  Temp.md  cal.py  cal2.py  openocd.cfg
Software/Application/: CMakeLists.txt  ST7789_SPI_Port.c  ST7789_SPI_Port.h  button_port.c  button_port.h  control.c  control.h  encoder_port.c  encoder_port.h  power_ui_api.c  power_ui_api.h  ui_data.h  ui_framework.c  ui_framework.h  ui_interaction.c  ui_main.c  ui_main.h  ui_page_control.c  ui_page_control.h  ui_page_output.c  ui_page_output.h
Software/Core/Inc/: comp.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Software/Core/Src/: adc.c  app_freertos.c  comp.c  dac.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  usart.c
Software/Docs/: Architecture.md  Hardware_Layer_API.md  STM32G4_MCU_Config.md
Software/Hardware/: CMakeLists.txt  ST7789.c  ST7789.h  ST7789_Reg.h  ST7789_SPI_Port.c  ST7789_SPI_Port.h  button.c  button.h  button_port.c  font.c
Software/cmake/stm32cubemx/: CMakeLists.txt
控制环路设计/: 信号链配置.md  参数设定.md  工况分析.md  术语解释.md
控制环路设计/.obsidian/: workspace.json
